feat: add endpoint that generates image for stops
